style: re-style product-image class to make book cover fit the cotainer

--- a/style.css
+++ b/style.css
@@ -128,9 +128,12 @@
   }
   
   .product-image {
-    width: 100%;
+    width: auto;
+    display: block;
+    margin: auto;
     aspect-ratio: 1;
     object-fit: cover;
+
   }
   
   .product-content {
